syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.userservice.grpc";
option java_outer_classname = "UserProto";

package user;

service UserService {
  // Obtener datos del usuario (para OrderService)
  rpc GetUserData (UserRequest) returns (UserResponse);
  
  // Validar credenciales
  rpc ValidateUser (ValidateUserRequest) returns (ValidateUserResponse);
}

message UserRequest {
  string user_id = 1;
}

message UserResponse {
  string user_id = 1;
  string username = 2;
  string email = 3;
  string address = 4;
  string phone = 5;
  string role = 6;
}

message ValidateUserRequest {
  string username = 1;
  string password = 2;
}

message ValidateUserResponse {
  bool valid = 1;
  string user_id = 2;
  string username = 3;
  string message = 4;
}